<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tekaware.christ.myictu.PostActivity">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/imageSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="70dp"
            android:background="#00ffffff"
            android:contentDescription="@string/post_feature_image"
            android:src="@drawable/add_btn" />

        <EditText
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/notice_title"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/notice_content"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/submitBtn"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submit_notice"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />
    </LinearLayout>

</FrameLayout>
